Fixed issue with stupid scrollbar appearing on smaller screens during dropdown menu interaction.

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+.navbar-collapse.in {
+    overflow-y: visible;
+}
+
 html, body {
 	height: 100%;
 }
